minor modifications